Show date on mobile, fix api_date timezone

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -131,7 +131,11 @@
   .post-date-day-month-year {
     margin-left: -0.2em;
     @include media-query($on-mobile) {
-      display: none;
+      text-align: right;
+      display: block;
+      .post-date-separator {
+        display: none;
+      }
     }
   }
   &.post-date-upcoming {
